--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
             <div class="column large-full">
 
                 <h1>
-                Hello, I'm John Doe, <br>
-                a frontend developer <br>
-                & designer currently <br>
-                based somewhere.
+                Embark on the Unseen <br>
+                Discover the Unforgettable <br>
+                Every Step is a New Adventure. <br>
+                Let's start now.
                 </h1>
 
                 <ul class="hero-social">
