--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
             <div class="column large-full">
 
                 <h1>
-                Embark on the Unseen <br>
-                Discover the Unforgettable <br>
-                Every Step is a New Adventure. <br>
-                Let's start now.
+                Uncharted <br>
+                Boundless <br>
+                Redefine <br>
+                It begins now.
                 </h1>
 
                 <ul class="hero-social">
