--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Ethos</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>donaldhkim</title>
+    <meta name="The here and now." content="">
+    <meta name="Donald Kim" content="">
 
     <!-- mobile specific metas
     ================================================== -->
