--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
             <div class="column large-full">
 
                 <h2>
-                Uncharted <br>
-                Boundless <br>
-                Redefine <br>
+                Uncharted. <br>
+                Boundless. <br>
+                Innovation. <br>
+                Be loved.
                 </h2>
 
                 <ul class="hero-social">
