--- a/index.html
+++ b/index.html
@@ -145,13 +145,11 @@
                     My studies were in biblical studies and theology, but the world seemed far bigger than
                     the course of my studies and the range of topics that I taught. My departure from teaching
                     coincided with the advent of a technological revolution. I am back in that space where
-                    my tech stack is finding this world to be both exhilarating and daunting. As I navigate
+                    my tech stack is finding this world to be exhilarating and new. As I navigate
                     this new terrain, I am constantly amazed by the opportunities technology presents for
-                    learning, communication, and innovation. Yet, I also find myself grappling with the
-                    rapid pace of change and the need to continually adapt and evolve. Despite the
-                    challenges, I am excited to embrace this new chapter of exploration and discovery,
-                    leveraging my academic background to contribute meaningfully to this ever-expanding
-                    digital landscape. </p>
+                    learning, communication, and innovation. Despite transitioning from the classroom, my passion 
+                    for history, theology, and languages persists, and I continue to engage with these subjects 
+                    through speaking opportunities and ongoing research endeavors. </p>
 
                 </div>
             </div>
@@ -642,7 +640,7 @@
                             Phone
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="tel:+1975432345">+197 543 2345</a>
+                            <a href="tel:817-458-8763">817.458.8763</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <br>
@@ -651,10 +649,10 @@
                             Social
                         </h5>
                         <ul class="footer-contact-block__list">
-                            <li><a href="#0">Twitter</a></li>
+                            <li><a href="http://twitter.com/donaldhkim">Twitter</a></li>
                             <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Behance</a></li>
-                            <li><a href="#0">Dribbble</a></li>
+                            <li><a href="https://www.instagram.com/donaldhkim/">Instagram</a></li>
+                            <li><a href="https://www.linkedin.com/in/donaldhkim/">LinkedIn</a></li>
                         </ul>
                     </div> <!-- end footer-contact-block -->
                 </div>
