--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     coincided with the advent of a technological revolution. I am back in that space where
                     my tech stack is finding this world to be exhilarating and new. As I navigate
                     this new terrain, I am constantly amazed by the opportunities technology presents for
-                    learning, communication, and innovation. Despite transitioning from the classroom, my passion 
-                    for history, theology, and languages persists, and I continue to engage with these subjects 
+                    learning, communication, and innovation. Despite transitioning from the classroom, my passion
+                    for history, theology, and languages persists, and I continue to engage with these subjects
                     through speaking opportunities and ongoing research endeavors. </p>
 
                 </div>
@@ -160,7 +160,7 @@
 
             <div class="row">
                 <div class="column">
-                    <h3 data-aos="fade-up">Career</h3>
+                    <h3 data-aos="fade-up">Experience</h3>
                 </div>
             </div>
 
@@ -170,11 +170,11 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co">Google</span>
-                                <span class="position__pos">Product Designer</span>
+                                <span class="position__co">Health Catalyst</span>
+                                <span class="position__pos">Analytics Engineer</span>
                             </h6>
                             <div class="position__timeframe">
-                                June 2017 - Present
+                                June 2023 - Present
                             </div>
                         </div>
 
@@ -189,11 +189,11 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co">Facebook</span>
-                                <span class="position__pos">UX Director</span>
+                                <span class="position__co">Southwestern Seminary</span>
+                                <span class="position__pos">Assistant Professor of Bible</span>
                             </h6>
                             <div class="position__timeframe">
-                                August 2015 - June 2017
+                                August 2007 - December 2022
                             </div>
                         </div>
 
@@ -208,11 +208,11 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co">Dropbox</span>
-                                <span class="position__pos">Mobile App Designer</span>
+                                <span class="position__co">Yale University</span>
+                                <span class="position__pos">Computer & Information Services Specialist</span>
                             </h6>
                             <div class="position__timeframe">
-                                April 2014 - August 2015
+                                July 2006 - August 2010
                             </div>
                         </div>
 
@@ -227,11 +227,11 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co">Microsoft</span>
-                                <span class="position__pos">Product Designer</span>
+                                <span class="position__co">IBM</span>
+                                <span class="position__pos">Software Engineer</span>
                             </h6>
                             <div class="position__timeframe">
-                                June 2012 - February 2014
+                                January 1999 - July 2003
                             </div>
                         </div>
 
