--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>donaldhkim.com | here and now</title>
+    <title>donaldhkim | here and now</title>
     <meta name="The here and now." content="">
     <meta name="Donald Kim" content="">
 
