--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                 </div>
 
                 <div class="footer-email-us">
-                    <a href="mailto:#0" class="btn btn--primary h-full-width">Let's Talk</a>
+                    <a href="letstalk@donaldhkim.com" class="btn btn--primary h-full-width">Let's Talk</a>
                 </div>
             </div>
 
@@ -632,7 +632,7 @@
                             Email
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="mailto:#0">sayhello@ethos.com</a>
+                            <a href="mailto:contact@donaldhkim.com">contact@donaldhkim.com</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <div class="footer-contact-block" data-aos="fade-up">
@@ -650,7 +650,6 @@
                         </h5>
                         <ul class="footer-contact-block__list">
                             <li><a href="http://twitter.com/donaldhkim">Twitter</a></li>
-                            <li><a href="#0">Instagram</a></li>
                             <li><a href="https://www.instagram.com/donaldhkim/">Instagram</a></li>
                             <li><a href="https://www.linkedin.com/in/donaldhkim/">LinkedIn</a></li>
                         </ul>
