--- a/index copy.html
+++ b/index copy.html
@@ -172,6 +172,8 @@
 
         </div> <!-- end s-about__section--profile -->
 
+    <section id="experience" class="s-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg-3000.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+
         <div class="s-about__section">
 
             <div class="row">
@@ -257,10 +259,11 @@
 
         </div> <!-- end s-about__section -->
 
+
     </section> <!-- end s-about -->
 
 
-    <!-- services
+    <!-- curriculum
     ================================================== -->
     <section id="curriculum" class="s-services target-section h-dark-bg">
 
@@ -358,7 +361,7 @@
 
 
     <!-- portfolio
-    ==================================================
+    ================================================== -->
     <section id="portfolio" class="s-portfolio target-section">
 
         <div class="row s-portfolio__header">
@@ -592,7 +595,7 @@
         </div> <!-- end s-cta -->
 
 
-    </section> end s-testimonials
+    </section> <!-- end s-testimonials -->
 
 
     <!-- footer
