--- a/index.html
+++ b/index.html
@@ -171,10 +171,9 @@
             </div>
 
         </div> <!-- end s-about__section--profile -->
-
-
-        <div class="s-about__section">
-
+    </section>
+    <section id="experience" class="s-about target-section">
+        <div class="s-about__section s-about__section--profile">
             <div class="row">
                 <div class="column">
                     <h1 data-aos="fade-up">Experience</h1>
@@ -259,7 +258,7 @@
         </div> <!-- end s-about__section -->
 
 
-    </section> <!-- end s-about -->
+    </section> <!-- end experience -->
 
 
     <!-- curriculum
