--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 </div>
 
                 <p class="lead" data-aos="fade-up">
-                I remember the very class that I taught. Latin. I was 26. Who would've thought that
+                I remember the very first class that I taught. Latin. I was 26. Who would've thought that
                 I'd be teaching for more than fifteen years?
                 </p>
             </div> <!-- end  s-services--leftcol -->
