--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>New Testament Surveys</h5>
+                            <h5>New Testament</h5>
                         </div>
                         <div class="services-list__item-body">
                             <p>
