--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         </div> <!-- end s-about__section--profile -->
 
-        <div class="s-about__section s-about__section--profile">
+        <div class="s-about__section">
             <div class="row">
                 <div class="column">
                     <h1 data-aos="fade-up">Experience</h1>
@@ -180,8 +180,9 @@
             </div>
 
             <div class="row block-large-1-2 block-900-full work-positions">
-
                 <div class="column" data-aos="fade-up">
+
+
                     <div class="position">
                         <div class="position__header">
                             <h6>
