--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         </div> <!-- end s-about__section--profile -->
 
-        <div class="s-about__section">
+        <div class="s-about__section" id="experience">
             <div class="row">
                 <div class="column">
                     <h1 data-aos="fade-up">Experience</h1>
