--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
-            <a href=./donaldkim.web.resume.pdf" class="btn btn--stroke btn--small">Download CV</a>
+            <a href="./donaldkim.web.resume.pdf" class="btn btn--stroke btn--small">Download CV</a>
 
         </div> <!-- end header-content -->
 
@@ -652,7 +652,7 @@
 
         <div class="row s-footer__bottom">
             <div class="column large-full ss-copyright">
-                <span>© copyright 2024 donald kim<</span>
+                <span>© copyright 2024 donald kim</span>
                 <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
             </div> <!-- end ss-copyright -->
 
