--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         </div>
                         <p>
                         After graduating from Yale, I was on staff at church. I needed a job and I didn't have to go
-                        far to find a job. Right on campus where the church was. Love working with the administration
+                        far to find a job. Right on campus where the church was. Support for the administration
                         of the school where I studied.
                         </p>
                     </div>
@@ -303,7 +303,7 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Classical Greek grammar. Read from the NT and the LXX. Toga days were the best.
+                            Greek grammar for Attic and Koine. Read the NT,LXX, and various authors. Toga days were the best.
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
@@ -313,7 +313,7 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Used Gundry as my textbook solely because of the pictures. Flew through the NT books in two semesters.
+                            Gundry as my textbook solely because of the pictures. Flew through the NT books in two semesters.
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
