--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 </div>
 
                 <div class="footer-email-us">
-                    <a href="letstalk@donaldhkim.com" class="btn btn--primary h-full-width">Let's Talk</a>
+                    <a mailto="letstalk@donaldhkim.com" class="btn btn--primary h-full-width">Let's Talk</a>
                 </div>
             </div>
 
