--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
 
         </div> <!-- end s-about__section--profile -->
 
-        <div class="s-about__section" id="experience">
+        <div class="s-about target-section" id="experience">
+            <!--class="s-about target-section"> old = s-about__section-->
             <div class="row">
                 <div class="column">
                     <h1 data-aos="fade-up">Experience</h1>
@@ -374,7 +375,7 @@
                 </div>
 
                 <div class="footer-email-us">
-                    <a mailto="letstalk@donaldhkim.com" class="btn btn--primary h-full-width">Let's Talk</a>
+                    <a href="mailto:letstalk@donaldhkim.com" class="btn btn--primary h-full-width">Let's Talk</a>
                 </div>
             </div>
 
