--- a/index.html
+++ b/index.html
@@ -166,13 +166,14 @@
                     Yale University<br>
                     <b>B.A. Classics</b><br>
                     University of Texas at Austin
+                    <div id="experience"></div>
                     </p>
                 </div>
             </div>
 
         </div> <!-- end s-about__section--profile -->
 
-        <div class="s-about target-section" id="experience">
+        <div class="s-about target-section" >
             <!--class="s-about target-section"> old = s-about__section-->
             <div class="row">
                 <div class="column">
