--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li><a class="smoothscroll" href="#about" title="About">About</a></li>
                     <li><a class="smoothscroll" href="#experience" title="Experience">Experience</a></li>
                     <li><a class="smoothscroll" href="#curriculum" title="Curriculum">Curriculum</a></li>
-                    <li><a href="mailto:contact@donaldhkim.com" title="Contact">Contact</a></li>
+                    <li><a class="smoothscroll" href="#contact" title="Contact">Contact</a></li>
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
@@ -97,9 +97,6 @@
                     </li>
                     <li>
                         <a href="https://www.instagram.com/donaldhkim/" title="">Instagram</a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/donaldhkim/" title="">LinkedIn</a>
                     </li>
                 </ul> <!-- end hero-social -->
 
@@ -164,9 +161,9 @@
                     Southwestern Seminary<br>
                     <b>M.Div., New Testament Studies</b><br>
                     Yale University<br>
-                    <b>B.A. Classics</b><br>
+                    <b id="experience">B.A. Classics</b><br>
                     University of Texas at Austin
-                    <div id="experience"></div>
+                    <div></div>
                     </p>
                 </div>
             </div>
@@ -290,22 +287,22 @@
                 <ul class="services-list" data-aos="fade-up">
                     <li class="services-list__item is-active">
                         <div class="services-list__item-header">
-                            <h5>Latin</h5>
+                            <h5>Greek</h5>
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Latin grammar. Latin literature. Roman and church history. Some inscriptions.
-                            My favorite author being Cicero.
+                            Greek grammar for Attic and Koine. Poured into the NT, LXX, and various authors. Toga days were the best.
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Greek</h5>
+                            <h5>Latin</h5>
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Greek grammar for Attic and Koine. Read the NT,LXX, and various authors. Toga days were the best.
+                            Latin grammar. Latin literature. Roman and church history. Some inscriptions.
+                            Cicero knew how to pack a punch with words.
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
@@ -319,13 +316,14 @@
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
+
                     <li class="services-list__item">
                         <div class="services-list__item-header">
                             <h5>Hermeneutics</h5>
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Fancy word for "interpretation" but it was a Bible study methods class. Never got to the the high-level
+                            Fancy word for "interpretation" but really just Bible study methods. Never got to the the high-level
                             theories, but we didn't need to.
                             </p>
                         </div>
@@ -343,7 +341,7 @@
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Exegesis Courses</h5>
+                            <h5>Advanced Exegesis</h5>
                         </div>
                         <div class="services-list__item-body">
                             <p>
@@ -361,17 +359,18 @@
 
     <!-- footer
     ================================================== -->
-    <footer class="s-footer h-dark-bg">
+    <footer id="contact" class="s-footer h-dark-bg">
 
         <div class="right-vert-line"></div>
 
         <div class="row s-footer__main">
             <div class="column large-6">
+
                 <div class="section-intro" data-aos="fade-up">
                     <h3 class="subhead">Get In Touch</h3>
 
                     <h1 class="display-1">
-                    Want to connect? Shoot me a message.
+                    Want to connect?
                     </h1>
                 </div>
 
