--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                              srcset="images/profile-pic.jpg 1x, images/profile-pic@2x.jpg 2x" alt="">
                     </div>
 
-                    <h3 data-aos="fade-up">So it began...</h3>
+                    <h3 data-aos="fade-up">Curiosity.</h3>
 
                     <p data-aos="fade-up">
                     In sixth grade, my first computer was a Pentium 386 that had Windows 3.0 and MS-DOS 4.51.
