--- a/index.html
+++ b/index.html
@@ -135,25 +135,27 @@
                     </div>
 
                     <h3 data-aos="fade-up">Curiosity.</h3>
-
                     <p data-aos="fade-up">
                     In sixth grade, my first computer was a Pentium 386 that had Windows 3.0 and MS-DOS 4.51.
                     In college, my first job was with IBM as a programmer—as a freshman. Then I switched majors five times:
                     undeclared, communication, philosophy, classics, computer science, and then back to classics. (Who knew?)
                     </p>
+                    <h3 data-aos="fade-up">Passion.</h3>
                     <p data-aos="fade-up">
                     My passion was ancient history. I had a head start in high school when I geeked out with Latin. Surprisingly,
                     I stuck with those subject matters that were most challenging. Programming came easy; reading comprehension not so much.
                     Even then, it was my thesis supervisor who challenged me to new heights. He encouraged me to apply to Yale, his alma mater.
                     </p>
+                    <h3 data-aos="fade-up">Opportunities.</h3>
                     <p data-aos="fade-up">
                     I got in. I went to Yale, studied theology there in New Haven, and also served on staff at a church for four years until
                     it was time for me to come back to Texas. I knew it was time because my mom was here and plus I got to start another graduate
-                    program, where I was offered a teaching post at the place where I started my studies again.
+                    program, where I was offered a teaching post at the place where I started my studies again. The next fiften years were spent on that campus in Fort Worth.
                     </p>
+                    <h3 data-aos="fade-up">Here and now.</h3>
                     <p data-aos="fade-up">
-                    The next fiften years were spent on that campus in Fort Worth. A lot of life happened. After those years, I was thrilled to begin
-                    the next chapter of my life. I am now fully immersed in the world of technology, while also cherishing my family and involvement
+                    A lot of life happened. After those years in the classroom, I was thrilled to begin a new chapter of my life.
+                    I went back into tech in 2023, fully immersed in the world of big data, while also cherishing my family and involvement
                     in church life.
                     </p>
                     <p data-aos="fade-up">
