--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
 
                     <h3 data-aos="fade-up">Curiosity.</h3>
                     <p data-aos="fade-up">
-                    In sixth grade, my first computer was a Pentium 386 that had Windows 3.0 and MS-DOS 4.51.
+                    In the sixth grade. My first computer was a Pentium 386 that had Windows 3.0 and MS-DOS 4.51.
                     In college, my first job was with IBM as a programmer—as a freshman. Then I switched majors five times:
                     undeclared, communication, philosophy, classics, computer science, and then back to classics. (Who knew?)
                     </p>
                     <h3 data-aos="fade-up">Passion.</h3>
                     <p data-aos="fade-up">
                     My passion was ancient history. I had a head start in high school when I geeked out with Latin. Surprisingly,
-                    I stuck with those subject matters that were most challenging. Programming came easy; reading comprehension not so much.
+                    I stuck with those subject matters that were most challenging. Programming came relatively easy; reading comprehension not so much.
                     Even then, it was my thesis supervisor who challenged me to new heights. He encouraged me to apply to Yale, his alma mater.
                     </p>
                     <h3 data-aos="fade-up">Opportunities.</h3>
