--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
                 </div>
 
                 <p class="lead" data-aos="fade-up">
-                I remember the very first class that I taught. Latin. I was 26. Who would've thought that
-                I'd be teaching for more than fifteen years?
+                So much happened in the classroom. Learning happened. So did a lot of life. We grew together. Those years flew by.
                 </p>
             </div> <!-- end  s-services--leftcol -->
 
