--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
                             </div>
                         </div>
                         <p>
-                        After twenty years in academia, I changed careers back into tech. I now live and breathe big data and I'm loving it.
-                        I work on migration projects with a special focus on data engineering.
+                        I live and breathe data pipelines and database design. I work on migration projects with a special focus on data engineering.
                         </p>
                     </div>
                 </div> <!-- end column -->
