--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <p>
                         One manager gave me a chance in my freshman year. Worked on code fixes
                         and shipped them out to cients as patches and service packs. Learned to
-                        code in a Unix environment. Bash = Bourne Again Shell. I was bourne again.
+                        code in a Unix environment. Bash = Bourne Again Shell. Yes, I am bourne again.
                         </p>
                     </div>
                 </div> <!-- end column -->
