--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="row s-footer__bottom">
             <div class="column large-full ss-copyright">
                 <span>© copyright 2024 donald kim</span>
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                <span>design by <a href="https://www.styleshout.com/">styleshout</a></span>
             </div> <!-- end ss-copyright -->
 
             <div class="ss-go-top">
