--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 </div>
 
                 <p class="lead" data-aos="fade-up">
-                So much happened in the classroom. Learning happened. So did a lot of life. We grew together. Those years flew by.
+                So much happened in the classroom. Learning happened. We grew together. Those years flew by.
                 </p>
             </div> <!-- end  s-services--leftcol -->
 
