--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <div class="position__header">
                             <h6>
                                 <span class="position__co">Yale University</span>
-                                <span class="position__pos">Computer & Information Services Specialist</span>
+                                <span class="position__pos">Computer & Information Services</span>
                             </h6>
                             <div class="position__timeframe">
                                 July 2006 - August 2007
