--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         </div>
                         <p>
                         After graduating from Yale, I was on staff at church. I needed a job and I didn't have to go
-                        far to find a job. Right on campus where the church was. Support for the administration
+                        far to find a job. Right on campus where the church was. Tech support for the administration
                         of the school where I studied.
                         </p>
                     </div>
