--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Greek grammar for Attic and Koine. Poured into the NT, LXX, and various authors. Toga days were the best.
+                            Greek grammar for Attic and Koine. Poured into NT, LXX, and various authors. Toga days were the best.
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
@@ -323,8 +323,8 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                            Fancy word for "interpretation" but really just Bible study methods. Never got to the the high-level
-                            theories, but we didn't need to.
+                            Fancy word for "interpretation" but really just Bible study methods. Never got to the high-level
+                            theories, but we didn't need to. So much to unpack in the text.
                             </p>
                         </div>
                     </li> <!-- services-list__item -->
