--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <div class="position__header">
                             <h6>
                                 <span class="position__co">Health Catalyst</span> <br>
-                                <span class="position__pos">Analytics Engineer | Data Architect</span>
+                                <span class="position__pos">Data Engineer | Cloud Migration</span>
                             </h6>
                             <div class="position__timeframe">
                                 June 2023 - Present
